--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,29 +4,20 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "georgian-hyphenation"
-version = "1.0.1"
-description = "Georgian Language Hyphenation Library - ქართული ენის დამარცვლის ბიბლიოთეკა"
+version = "2.0.1"
+description = "Georgian Language Hyphenation Library v2.0 - Academic Logic"
 readme = "README.md"
 requires-python = ">=3.7"
 license = {text = "MIT"}
 authors = [
     {name = "Guram Zhgamadze", email = "guramzhgamadze@gmail.com"}
 ]
-keywords = ["georgian", "hyphenation", "nlp", "linguistics", "kartuli", "syllabification"]
 classifiers = [
-    "Development Status :: 4 - Beta",
+    "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.7",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Natural Language :: Georgian",
 ]
 
 [project.urls]
 Homepage = "https://github.com/guramzhgamadze/georgian-hyphenation"
-Documentation = "https://guramzhgamadze.github.io/georgian-hyphenation/"
-Repository = "https://github.com/guramzhgamadze/georgian-hyphenation"
