--- a/browser-extension-chrome/manifest.json
+++ b/browser-extension-chrome/manifest.json
@@ -1,33 +1,28 @@
 {
   "manifest_version": 3,
-  "name": "Georgian Hyphenation - ქართული დამარცვლა",
-  "version": "2.0.1",
-  "description": "Automatic hyphenation for Georgian text on any website. ავტომატური დამარცვლა ქართული ტექსტისთვის ნებისმიერ ვებსაიტზე.",
-  "permissions": [
-    "activeTab",
-    "scripting",
-    "storage",
-    "tabs"
-  ],
-  "host_permissions": [
-    "<all_urls>"
-  ],
+  "name": "Georgian Hyphenation",
+  "version": "2.2.4",
+  "description": "Automatic hyphenation for Georgian text with v2.2 Hybrid Engine (Algorithm + Dictionary)",
+  "permissions": ["storage", "scripting"],
+  "host_permissions": ["<all_urls>"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "icons/icon16.png",
-      "32": "icons/icon32.png",
       "48": "icons/icon48.png",
       "128": "icons/icon128.png"
     }
   },
   "icons": {
-    "16": "icons/icon16.png",
-    "32": "icons/icon32.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
   "background": {
     "service_worker": "js/background.js"
-  }
+  },
+  "content_scripts": [{
+    "matches": ["<all_urls>"],
+    "js": ["js/hyphenator.js", "js/content.js"],
+    "run_at": "document_idle",
+    "all_frames": false
+  }]
 }
