Firefox manifest.json fix

--- a/browser-extension-firefox/manifest.json
+++ b/browser-extension-firefox/manifest.json
@@ -37,10 +37,13 @@
     }
   ],
   
-  "applications": {
+    "browser_specific_settings": {
     "gecko": {
-      "id": "georgian-hyphenation@guramzhgamadze.com",
-      "strict_min_version": "57.0"
+      "id": "georgian-hyphenation@guramzhgamadze.github.io",
+      "strict_min_version": "142.0",
+      "data_collection_permissions": {
+        "required": ["none"]
+      }
     }
   }
 }
