Word add-in 2.2.6 and chrome extention fixes

--- a/browser-extension-chrome/manifest.json
+++ b/browser-extension-chrome/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Georgian Hyphenation",
-  "version": "2.2.6",
-  "description": "Automatic hyphenation for Georgian text with v2.2 Hybrid Engine (Algorithm + Dictionary)",
+  "version": "2.2.7",
+  "description": "Automatic hyphenation for Georgian text with v2.2 Hybrid Engine (Algorithm + Dictionary) - Enhanced Facebook & SPA compatibility",
   "permissions": ["storage", "scripting"],
   "host_permissions": ["<all_urls>"],
   "action": {
