--- a/browser-extension-firefox/manifest.json
+++ b/browser-extension-firefox/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
   "name": "Georgian Hyphenation",
-  "version": "2.2.6.2",
-  "description": "Automatic hyphenation for Georgian text with v2.2 Hybrid Engine (Algorithm + Dictionary)",
+  "version": "2.2.7",
+  "description": "Automatic hyphenation for Georgian text)",
   "permissions": [
     "storage",
     "<all_urls>",
